--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
    integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
    crossorigin=""></script>
-   <script src="dcla.js"></script>
+   <script src="dcla_clean.js"></script>
    <script src="nycneighborhoods.js"></script>
   </head>
   <body>
