--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
    <script src="nycneighborhoods.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h1>NYC Cultural Organizations</h1>
+    <div class="flex-container">
+      <div><h1>Cultural Organizations of New York City</h1>
       <p>This is an interactive map of cultural organizations in New York City, sourced from the <a href=https://www.nyc.gov/site/dcla/index.page>NYC Department of Cultural Affairs (DCLA)</a>.</p>
-      <p>I study organizations and am interested in how they are classified, including what gets classified as an organization. Looking at their website, there is a list of organizations 
-        that provide services, but no map or guide. So I wanted to explore the data spatially, rendering a prototype map.</p>
-      <p>Since this is a minimum viable product approach final project, I can't go into the level of detail I would like to. But I may examine further over time.</p>
-      <p>As you explore this data, what questions come to mind?</p>
-      <div id="map"></div>
+      <p>I study organizations and am interested in what the taxonomy of cultural organizations is. Looking at their website, there is a list of organizations 
+        that provide services, but no map or guide.
+      <p> Of note, from the data, over 500 organizations did not have geocoordinates and thus were filtered out from the dataset dispalyed here. No websites for the organizations were included in the data.
+      <p>This project renders a spatial representation of the organizations, layered over NYC neighborhood boundaries we used in a class exercise, offering a way to explore the distribution of cultural organizations across neighborhoods.</p>
+      <p>Of course, the neighborhood definitions are also different in some cases, as evidenced in the pop-up labels.</p>
+      <p>Since this final project is a minimum viable product, I can't go into the level of detail I would like to. But I may examine further over time.</p>
+      <p>Some things to add could include chloropleth density across boroughs, custom icons for each type of organization, and a drop-down menu that can sort between the different types or display by borough.</p>
     </div>
+    <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="map.js"></script>
+    <br>
+    <p> As you explore this data, what questions come to mind?</p>
+  </div>
+    <img src =dclalogo.svg alt="DCLA Logo" width="180" height="60">
+    
   </body>
 </html>
