--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
   <body>
     <div class="flex-container">
       <div><h1>Cultural Organizations of New York City</h1>
-      <p>This is an interactive map of cultural organizations in New York City, sourced from the <a href=https://www.nyc.gov/site/dcla/index.page>NYC Department of Cultural Affairs (DCLA)</a>.</p>
+        <h2>Data 70600: Intro to JavaScript | Fall 2023</h2>
+        <h3>Ian Williams</h3>
+        <br>
+      <p>This is an interactive map of cultural organizations in New York City, sourced from <a href=https://opendata.cityofnewyork.us/>NYC Open Data</a>. 
+        The data set was provided by the <a href=https://www.nyc.gov/site/dcla/index.page>NYC Department of Cultural Affairs (DCLA)</a>.</p>
       <p>I study organizations and am interested in what the taxonomy of cultural organizations is. Looking at their website, there is a list of organizations 
         that provide services, but no map or guide.
-      <p> Of note, from the data, over 500 organizations did not have geocoordinates and thus were filtered out from the dataset dispalyed here. No websites for the organizations were included in the data.
-      <p>This project renders a spatial representation of the organizations, layered over NYC neighborhood boundaries we used in a class exercise, offering a way to explore the distribution of cultural organizations across neighborhoods.</p>
+      <p> Of note, from the data, over 500 organizations did not have geocoordinates and thus were filtered out from the dataset displayed here. 
+        No websites for the organizations were included in the data.
+      <p>This project renders a spatial representation of the organizations, layered over NYC neighborhood boundaries we used in a class exercise, 
+        offering a way to explore the distribution of cultural organizations across neighborhoods.</p>
       <p>Of course, the neighborhood definitions are also different in some cases, as evidenced in the pop-up labels.</p>
-      <p>Since this final project is a minimum viable product, I can't go into the level of detail I would like to. But I may examine further over time.</p>
-      <p>Some things to add could include chloropleth density across boroughs, custom icons for each type of organization, and a drop-down menu that can sort between the different types or display by borough.</p>
+      <p>Since this final project is a minimum viable product, I can't go into the level of detail I would like to. 
+        But I may examine further over time.</p>
+      <p>Some things to add could include chloropleth density across boroughs, custom icons for each type of organization, 
+        and a drop-down menu that can sort between the different types or display by borough.</p>
     </div>
     <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
