--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>Data 70600: Intro to JavaScript | Fall 2023</h2>
         <h3>Ian Williams</h3>
         <br>
-      <p>This is an interactive map of cultural organizations in New York City, using data sourced from <a href=https://opendata.cityofnewyork.us/>NYC Open Data</a>. 
-        The data set was provided by the <a href=https://www.nyc.gov/site/dcla/index.page>NYC Department of Cultural Affairs (DCLA)</a>.</p>
+      <p>This is an interactive map of cultural organizations in New York City, using data sourced from <a href=https://data.cityofnewyork.us/Recreation/DCLA-Cultural-Organizations/u35m-9t32 target="_blank">NYC Open Data</a>. 
+        The data set was provided by the <a href=https://www.nyc.gov/site/dcla/index.page target="_blank">NYC Department of Cultural Affairs (DCLA)</a>.</p>
       <p>I study organizations, so I am interested in what the taxonomy of cultural organizations is within this list. Looking at their website, there is a list of organizations 
         that provide services, but no map or guide. There is also not a definitive taxonomy.
       <p>This project renders a spatial representation of the organizations, layered over NYC neighborhood boundaries we used in a class exercise, 
@@ -30,16 +30,19 @@
         But I may tinker and improve over time.</p>
       <p>Some things to add could include choropleth shading to show organizational density across boroughs, custom icons for each type of organization, 
         and a drop-down menu that can sort between the different types or display by borough.</p>
-        <p> <strong>Note</strong>, from the data, over 500 organizations did not have geocoordinates and thus were filtered out from the dataset displayed here. I used R to process the data in CSV format before converting it to JSON, as I am more familiar with it than JavaScript.
+        <p> <strong>Note:</strong> from the data, over 500 organizations did not have geocoordinates and thus were filtered out from the dataset displayed here. I used R to process the data in CSV format before converting it to JSON, as I am more familiar with it than JavaScript.
           No websites for the organizations were included in the data. The data set lists 20 different variables for "Discipline" with no further explanation.
     </div>
     <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="map.js"></script>
     <br>
+    </div>
+    <div class="flex-container">
+      <div>
     <p> As you explore this data, what questions come to mind?</p>
-  </div>
     <img src =dclalogo.svg alt="DCLA Logo" width="180" height="60">
-    
+    </div>
+    </div>
   </body>
 </html>
