--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </div>
     <div class="flex-container">
       <div>
-    <p> As you explore this data, what questions come to mind?</p>
+        <!-- styled the button, still working on making it work for view reset-->
+        <button class = "button" id="reset-view" onclick = "alert('Map reset')">This feature is not yet operational</button>
+        <p> As you explore this data, what questions come to mind?</p>
     <img src =dclalogo.svg alt="DCLA Logo" width="180" height="60">
     </div>
     </div>
