--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="flex-container">
       <div>
         <!-- styled the button, still working on making it work for view reset-->
-        <button class = "button" id="reset-view" onclick = "alert('Map reset')">This feature is not yet operational</button>
+        <button class = "button" id="reset-view" onclick = "alert('This feature is not yet operational')">Map reset</button>
         <p> As you explore this data, what questions come to mind?</p>
     <img src =dclalogo.svg alt="DCLA Logo" width="180" height="60">
     </div>
