--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
       <h4>Data Sources</h4>
         <p>This is an interactive map of cultural organizations in New York City, using data sourced from <a href=https://data.cityofnewyork.us/Recreation/DCLA-Cultural-Organizations/u35m-9t32 target="_blank">NYC Open Data</a>. 
-        The data set was provided by the <a href=https://www.nyc.gov/site/dcla/index.page target="_blank">NYC Department of Cultural Affairs (DCLA)</a>. It also uses <a href= https://data.beta.nyc/dataset/pediacities-nyc-neighborhoods/resource/35dd04fb-81b3-479b-a074-a27a37888ce7 target="_blank"> data from betNYC</a> for NYC neighborhood boundaries, which we used in <a href=https://zweibel.net/Javascripting-Graduate-Student/workshop/javascript/?page=14 target="_blank">Lesson 14</a>.</p>
+        The data set was provided by the <a href=https://www.nyc.gov/site/dcla/index.page target="_blank">NYC Department of Cultural Affairs (DCLA)</a>. It also uses <a href= https://data.beta.nyc/dataset/pediacities-nyc-neighborhoods/resource/35dd04fb-81b3-479b-a074-a27a37888ce7 target="_blank"> data from betaNYC</a> for NYC neighborhood boundaries, which we used in <a href=https://zweibel.net/Javascripting-Graduate-Student/workshop/javascript/?page=14 target="_blank">Lesson 14</a>.</p>
       <h4>Rationale</h4>
         <p>I study organizations, so I am interested in what the taxonomy of cultural organizations is within this list. Looking at the agency's website, there is a list of organizations 
         that provide services, but no map or guide that is easily navigable. There is also not a definitive taxonomy of the types of cultural organizations. Exploring the data set helped me to see that in DCLA's implicit taxonomy, 
